# actix_nx_monorepo

./: Cargo.toml  docker-compose.yaml
apps/auth_services/: Cargo.toml  project.json  user_config.toml
apps/auth_services/.sqlx/: query-114e2f6571d155a0a26bca0f7ffc67bbaa133800e1c5fcd5127f6c6c94f48bcd.json  query-7ccbe7016285c163489e2d63dffd25438f6b59f28ae3e8950fbe8078af11b74d.json  query-8785b75587ca92d7599be2e2b93edcaa613fc8dabc19e601bf63c000f064fcc5.json  query-9f0b4d1db0fd5bf6b3281fae8ec362367c45ee9deb0aa556621f6fa6cc4e2182.json  query-c779d3ba57a6bc380aadab29208a6cada02c1d3bd82833bccb81b1fc222aa625.json  query-caf278d8fae00497c9556d0710ac0a6d46cf0a39a62e1fe043532625f4ff57e2.json  query-e18b4d3bcb18a253a3310317140e95574be340b8cf300706a3974a96c0caf902.json
apps/auth_services/migrations/: 20250204071903_user.up.sql
apps/auth_services/src/: config_type.rs  env_var.rs  main.rs
apps/auth_services/src/middlewares/: access_token_middleware.rs  mod.rs  refresh_token_middleware.rs
apps/auth_services/src/modules/: mod.rs  user_handlers.rs  user_models.rs  user_query.rs  user_services.rs
apps/auth_services/src/modules/user/: handler.rs  mod.rs  model.rs  query.rs  service.rs
apps/auth_services/src/utils/: jwt_utils.rs  mod.rs  types_utils.rs
apps/post_gateway/: Cargo.toml  post_gateway_config.toml  project.json
apps/post_gateway/proto/: post.proto
apps/post_gateway/src/: config_type.rs  env_var.rs  main.rs
apps/post_gateway/src/modules/: mod.rs  post_handler.rs  post_model.rs
apps/post_gateway/src/modules/post/: handler.rs  model.rs
apps/post_services/: Cargo.toml  build.rs  post_config.toml  project.json
apps/post_services/proto/: post.proto
apps/post_services/src/: config_type.rs  main.rs
apps/post_services/src/modules/: mod.rs  post_middleware.rs  post_models.rs  post_query.rs  post_services.rs
apps/post_services/src/modules/post/: handler.rs  mod.rs  model.rs  query.rs
apps/posts_consumer/: Cargo.toml  project.json
config/: post_config.toml
libs/config_libs/src/: lib.rs  user_config.toml
libs/jwt_libs/: Cargo.toml  project.json
libs/jwt_libs/src/: lib.rs
libs/kafka_libs/: Cargo.toml
libs/kafka_libs/src/: lib.rs
libs/logger_libs/: Cargo.toml
libs/logger_libs/src/: lib.rs
libs/pgsql_libs/: Cargo.toml
libs/proto_libs/proto/: post.proto
libs/rabbitmq_libs/: Cargo.toml
libs/rabbitmq_libs/src/: lib.rs
libs/redis_libs/: Cargo.toml
libs/redis_libs/src/: lib.rs
migrations/: 20250204095155_refresh_token.down.sql  20250204095155_refresh_token.up.sql  20250205080855_post.down.sql  20250205080855_post.up.sql
