
[workspace]
resolver = '2'
members = [
	'apps/auth_services',
	'apps/post_services',
	'apps/post_gateway',
	'libs/rabbitmq_libs',
	'libs/redis_libs',
	'libs/kafka_libs',
	'libs/pgsql_libs',
	'libs/jwt_libs',
	'apps/posts_consumer',
	'libs/proto_libs',
	'libs/config_libs',
	'libs/logger_libs',
]

[profile.release]
lto = true
