[package]
name = "auth_services"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
pgsql_libs= { path = "../../libs/pgsql_libs"}
dotenv= "0.15"
actix-cors = "0.7"                               
actix-web = "4.2.1"                              
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
env_logger = "0.11"                             
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"                              
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"
redis = "0.28.1"
lapin = "2.5.0"
r2d2_redis = "0.14.0"
argon2 = "0.5.3"
lazy_static = "1.5.0"
regex = "1.11.1"
jsonwebtoken = "9.3.0"
redis_libs ={ path = "../../libs/redis_libs"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
