[package]
name = "post_gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
tonic = "0.12.3"
redis_libs ={ path = "../../libs/redis_libs"}
pgsql_libs= { path = "../../libs/pgsql_libs"}
log = "0.4"
dotenv= "0.15"
actix-cors = "0.7"                               
actix-web = "4.2.1"                              
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
env_logger = "0.11"                             
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"                              
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.12.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
