[package]
name = "post_gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
kafka_libs = {path = "../../libs/kafka_libs"}
proto_libs ={ path = "../../libs/proto_libs"}
tonic = { version = "0.12.3" }
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.12.3"
prost = "0.13.4"
tonic-web = "0.12.3"
tower-http = "0.6.2"
log = "0.4"
dotenv= "0.15"
actix-cors = "0.7"                               
actix-web = "4.2.1"                              
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
env_logger = "0.11"                             
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"                              
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"
redis = "0.28.1"
lapin = "2.5.0"
r2d2_redis = "0.14.0"
argon2 = "0.5.3"
lazy_static = "1.5.0"
regex = "1.11.1"
jsonwebtoken = "9.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
