[package]
name = "post_services"
version = "0.1.0"
edition = "2021"


[dependencies]
pgsql_libs = { path = "../../libs/pgsql_libs" }
jwt_libs ={ path = "../../libs/jwt_libs"}
redis_libs ={ path = "../../libs/redis_libs"}
logger_libs = {path = "../../libs/logger_libs"}
dotenv= "0.15"
env_logger = "0.11"                             
tonic = "0.12.3"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.12.3"
prost = "0.13.4"
tonic-web = "0.12.3"
tower-http = "0.6.2"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
redis = "0.28.1"
lapin = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
r2d2_redis = "0.14.0"
proto_libs ={ path = "../../libs/proto_libs"}
config_libs = {path = "../../libs/config_libs"}
# [build-dependencies]
# tonic-build = "0.12.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
